--- a/index.html
+++ b/index.html
@@ -13,31 +13,37 @@
 </head>
 
 <body>
-  <img class="img-main" src="./images/image-product-mobile.jpg" alt="">
-  <div class="card-body">
 
-    <p class="category">P E R F U M E</p>
-
-    <h1 class="title-product">Gabrielle Essence Eau De Parfum</h1>
-
-    <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
-      Perfumer-Creator for the House of CHANEL.</p>
-
-    <div class="prices">
-      <h1>$149.99</h1>
-      <h4>$169.99</h4>
+  <div class="container">
+    <img class="img-mobile" src="./images/image-product-mobile.jpg" alt="">
+    <img class="img-desktop" src="./images/image-product-desktop.jpg" alt="">
+  
+    <div class="card-body">
+  
+      <p class="category">P E R F U M E</p>
+  
+      <h1 class="title-product">Gabrielle Essence Eau De Parfum</h1>
+  
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        Perfumer-Creator for the House of CHANEL.</p>
+  
+      <div class="prices">
+        <h1>$149.99</h1>
+        <h4>$169.99</h4>
+      </div>
+  
+      <div class="button-cart">
+        <button><img class="img-cart" src="./images/icon-cart.svg" alt="">Add to Cart</button>
+      </div>
+  
     </div>
-
-    <div class="button-cart">
-      <button><img class="img-cart" src="./images/icon-cart.svg" alt="">Add to Cart</button>
-    </div>
-    
   </div>
-
-  <footer class="attribution">
-    <p>Challenge by: <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</footer></p>
-    <p>Coded by: <a href="#">Wanderson Carvalho</a>.</p>
-  </footer>
+  
+  <div class="attribution">
+    <p>Challenge by: <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a></p>
+    <p>Coded by: <a href="https://github.com/wancarvalho">Wanderson Carvalho</a></p>
+  </div>
+    
 </body>
 
 </html>
