--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
       <p class="category">P E R F U M E</p>
   
-      <h1 class="title-product">Gabrielle Essence Eau De Parfum</h1>
+      <h1 class="title-product">Gabrielle Essence Eau <br>De Parfum</h1>
   
       <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
         Perfumer-Creator for the House of CHANEL.</p>
